--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -30,3 +30,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/ZombieKiller")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/ZombieKiller")
 
+[/Script/NavigationSystem.RecastNavMesh]
+AgentHeight=135.900543
+AgentMaxStepHeight=45.047539
+
