Nav mesh + DM + UI + Gun asset + hp + damage

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -33,4 +33,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/NavigationSystem.RecastNavMesh]
 AgentHeight=135.900543
 AgentMaxStepHeight=45.047539
+CellHeight=30.000000
+CellSize=5.000000
 
