--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -29,9 +29,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/ZombieKiller")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/ZombieKiller")
+GameSingletonClassName=/Game/Blueprints/NewObject.NewObject_C
 
 [/Script/NavigationSystem.RecastNavMesh]
 AgentHeight=135.900543
 AgentMaxStepHeight=45.047539
 CellHeight=30.000000
 CellSize=5.000000
+
