--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=85780C524764F433D4CA3084622A7483
-ProjectName=First Person BP Game Template
+ProjectName=Zombie Killer Project
+
